--- a/angular2rc3/index.html
+++ b/angular2rc3/index.html
@@ -17,6 +17,9 @@
     <script>
       System.import('app').catch(function(err){ console.error(err); });
     </script>
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="assets/css/lumen.bootstrap.min.css" />
   </head>
   <!-- 3. Display the application -->
   <body>
