--- a/angular2rc3/index.html
+++ b/angular2rc3/index.html
@@ -23,6 +23,8 @@
   </head>
   <!-- 3. Display the application -->
   <body>
-    <my-app>Cargando...</my-app>
+    <div class="container">
+      <my-app>Cargando...</my-app>
+    </div>
   </body>
 </html>
